--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ h1 {
 
 .card:hover {
     animation: bounce 0.5s linear;
+    cursor: pointer;
 }
 
 .card-title {
@@ -65,5 +66,39 @@ h1 {
     100% {
         transform: translateY(0);
     }
+}
+
+.popup{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background: #f4f4f4;
+    opacity: 0.95;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#closeBtn{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+button{
+    background-color: orangered;
+    padding: 10px 20px;
+    border: none;
+    color: white;
+    border-radius: 3px;
+    transition: transform 100ms;
+}
+
+button:hover{
+    cursor: pointer;
+    transform: translateY(-1px);
+    box-shadow: 0px 1px 2px darkred;
 }
     
